--- a/UC alert tool/Content/Site.css
+++ b/UC alert tool/Content/Site.css
@@ -22,6 +22,9 @@ select,
 textarea{
     max-width: 280px;
 }
+.maxWidth{
+    max-width: 280px;
+}
 .TextAreaFor100Percent{
     width:100%;
 }
@@ -43,9 +46,13 @@ textarea{
     z-index:1;
     position:absolute;
     width:250px;
-    margin-top:5;
+    margin-top:5px;
 }
 .errortext{
     color:orangered;
+    font-style:italic;
+}
+#totalCharacters{
+    font-size:11px;
     font-style:italic;
 }
