--- a/UC alert tool/Views/Home/Index.cshtml
+++ b/UC alert tool/Views/Home/Index.cshtml
@@ -27,7 +27,7 @@
                         }
                     </h3>
                 </div>
-                <div class="panel-body">@Html.DisplayFor(modelItem => item.Inhoud)</div>
+                <div class="panel-body">@Html.Raw(item.Inhoud.Replace(Environment.NewLine,"<br>"))</div>
                 <div class="panel-footer">
                     van @item.Begindatum.ToString("dd-MM-yyyy") @item.Begintijd.Value.ToString(@"hh\:mm")<br />
                     @if (item.Einddatum != null)
