--- a/UC alert tool/Views/Shared/_Layout.cshtml
+++ b/UC alert tool/Views/Shared/_Layout.cshtml
@@ -67,7 +67,14 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - UC Systems Alert System</p>
+            <p>&copy; @DateTime.Now.Year - UC Systems Alert System
+            </p>
+            <p class="pull-right">
+                @if (ViewContext.HttpContext.User.Identity.IsAuthenticated)
+                {
+                    @:website versie : @ViewContext.Controller.GetType().Assembly.GetName().Version
+                }
+            </p>
         </footer>
     </div>
     @Scripts.Render("~/bundles/jquery")
