--- a/UC alert tool/Views/Shared/_Layout.cshtml
+++ b/UC alert tool/Views/Shared/_Layout.cshtml
@@ -69,13 +69,13 @@
         <footer>
             <p>&copy; @DateTime.Now.Year - UC Systems Alert System
             </p>
-            <p class="pull-right">
+            <p>
                 @if (ViewContext.HttpContext.User.Identity.IsAuthenticated)
                 {
-                    @:website versie : @ViewContext.Controller.GetType().Assembly.GetName().Version
+                    @:Website versie : @ViewContext.Controller.GetType().Assembly.GetName().Version
                 }
             </p>
-        </footer>
+        </footer>   
     </div>
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
