--- a/UC alert tool/Views/Shared/_MeldingPartial.cshtml
+++ b/UC alert tool/Views/Shared/_MeldingPartial.cshtml
@@ -23,7 +23,9 @@
         </div>
         <div class="form-group">
             @Html.LabelFor(model => model.ProductID, htmlAttributes: new { @class = "control-label col-md-2" })
+            <input type="hidden" id="productRecipients" value="@ViewBag.ProductCustomerCount" />
             <div class="col-md-10">
+
                 @Html.DropDownList("ProductID", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.ProductID, "", new { @class = "text-danger" })
             </div>
