--- a/UC alert tool/Views/Storingen/Details.cshtml
+++ b/UC alert tool/Views/Storingen/Details.cshtml
@@ -49,15 +49,6 @@
         <dd>
             @Html.DisplayFor(model => model.Einddatum)
         </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.IsGesloten)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.IsGesloten)
-        </dd>
-
         <dt>
             @Html.DisplayNameFor(model => model.Begintijd)
         </dt>
@@ -73,7 +64,13 @@
         <dd>
             @Html.DisplayFor(model => model.Eindtijd)
         </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.IsGesloten)
+        </dt>
 
+        <dd>
+            @Html.DisplayFor(model => model.IsGesloten)
+        </dd>
         <dt>
             @Html.DisplayNameFor(model => model.Producten.Naam)
         </dt>
@@ -85,6 +82,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Storing aanpassen", "Edit", new { id = Model.Id }) |
+    @Html.ActionLink("Terug naar overzicht", "Index")
 </p>
