--- a/UC alert tool/Views/Instellingen/emailtemplate.cshtml
+++ b/UC alert tool/Views/Instellingen/emailtemplate.cshtml
@@ -25,10 +25,16 @@
                 </div>
             </div>
             <div class="form-group">
+                <label class="control-label col-md-3">Huidige handtekening</label>
+                <div class="col-md-9">
+                    <img src="@ViewBag.imagePath" />
+                </div>
+            </div>
+            <div class="form-group">
                 <div class="col-md-9">
                     <input type="submit" value="Opslaan" class="btn btn-default" />
                 </div>
             </div>
-        </div>
+         </div>
     }
 </div>
